core: Fix enum deserialization and support UUID out of the box